# AI-Universal-Service-Orchestrator

./: .env.example  .gitignore  IMPLEMENTATION_REVIEW.md  README.md  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ACP_COMPLIANCE.md  AGENTIC_CONSENT_FLOW.md  AI_PLATFORM_PRODUCT_DISCOVERY.md  API_CONTRACTS.md  ARCHITECTURAL_REVIEW_FEATURES_REPORT.md  AUTHENTICATION_SETUP.md  CAPABILITY_MAPPING.md  CHATGPT_APP_DIRECTORY_SUBMISSION.md  CHATGPT_GEMINI_DEMO.md  CHATGPT_GEMINI_TEST_SCENARIOS.md  CODE_STANDARDS.md  COMMERCE_FEED_SCHEMA_REQUIREMENTS.md  DATABASE_SETUP.md  DEVELOPMENT_ENVIRONMENT.md  DEVELOPMENT_SETUP_PLAN.md  ENVIRONMENT_VARIABLES.md  GIT_AZURE_CLI_SETUP.md  GIT_WORKFLOW.md  GPT_OSS_120B.md  HOW_TO_BUILD_AND_DEPLOY.md  IMPLEMENTATION_REVIEW_DISTRIBUTED_AGENT_AND_EXPERIENCE_TAGS.md  INVENTORY_SYNC_ARCHITECTURE.md  MODEL_INTERACTIONS_ARCHITECTURE.md  MODULE1_SCOUT_ENGINE.md  PROOF_STATE_MACHINE.md  README.md  REAL_LIFE_TEST_SCENARIO.md  RENDER_DEPLOYMENT.md  RUNTIME_PROMPTS_DATE_NIGHT_FLOW.md  SERVER_TESTING.md  STAGING_SETUP.md  TESTING_RENDER_AND_PORTAL.md  gemini-tool-declaration.json  implementation-status-distributed-business-agent-a2a.md  openapi-chatgpt-actions.yaml  openapi-partner-actions.yaml  prerequisites-status-before-next-implementation.md  ucp-current-vs-target.md
scripts/: gemini_demo.py  health-and-warmup.sh  health_warmup.py  sla_re_sourcing_job.py  sync_prompts_to_migration.py
supabase/: config.toml  seed.sql  seed_phase2_scenario.sql  seed_test_partners.sql
tests/: conftest.py  (+8 more)
(+975 files in other folders)
