[project]
name = "ai-universal-service-orchestrator"
version = "0.1.0"
description = "Platform for orchestrating complex multi-vendor orders via AI agents"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "server: marks tests as server-based (run against deployed URL)",
]

[tool.pyright]
# Resolve imports like "api.admin", "db" when analyzing orchestrator-service (run from repo root)
extraPaths = ["services/orchestrator-service"]
reportMissingImports = "warning"
